# projects

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ADDRESS_SEARCH.md  ARCHITECTURE.md  AUDIT.md  AUDIT_AI.md  BATCH_GUIDE.md  BUDGET_MIDDLEWARE.md  ENRICHMENT_IMPLEMENTATION.md  GOOGLE_MAPS_INTEGRATION.md  GOOGLE_MAPS_SEARCH.md  IMPLEMENTATION_SUMMARY.md  LEGAL.md  PROFESSIONAL_SERVICES_IMPLEMENTATION.md  QUALITY_FRAMEWORK.md  README.md  address_enriched.parquet  ai_context_builder.py  bootstrap.ps1  builder_cli.py  create_job.py  demo_phase4_automation.py  demo_quality_framework.py  export_marketing.py  generate_professional_services_final.py  job_template.yaml  list_commits.py  niche_guide.md  pack.ps1  pricing.md  projects_mcp_server.py  proxy_manager.py  pyproject.toml  requirements.txt  runbook.md  s.txt  test_address_pipeline.py  test_complete_pipeline.py  (+6 more)
ai/: __init__.py  extract_llm.py
api/: apify_agents.py  apify_agents_async.py  collect_api.py  pappers_client.py
benchmarks/: __init__.py  performance_tests.py
cache/: sqlite_cache.py
collect/: __init__.py  nafreference.py
compliance/: __init__.py  gdpr.py
config/: budget_config.py  budgets.yaml  enrichment.yaml  enrichment_config.py
constants/: __init__.py  generic_domains.txt  generic_email_domains.txt  generic_email_prefixes.txt
correlation/: __init__.py  correlation.py  rules.py
dashboard/: __init__.py  apify_dashboard.py
docs/: UPGRADE_NOTES.md  apify-automation-roadmap.md  apify-complete-guide.md  apify-implementation-details.md  apify-integration.md  automation-guide.md  (+13 more)
(+258 files in other folders)
