[project]
name = "projects"
version = "0.0.0"
description = "Internal automation utilities"
requires-python = ">=3.10"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",
    "F",
    "B",
    "I",
    "UP"
]
ignore = [
    "E501"
]

[tool.ruff.isort]
known-first-party = [
    "api",
    "builder_cli",
    "utils"
]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true

[tool.mypy.builder_cli]
disallow_untyped_defs = false

[tool.mypy.generate_professional_services_final]
disallow_untyped_defs = false

[tool.mypy."utils.*"]
disallow_untyped_defs = false
[tool.pytest.ini_options]
pythonpath = ['.']
